--- a/static/index.html
+++ b/static/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8" />
+    <meta charset="utf-8"/>
     <script src="../dist/main.js"></script>
+    <link rel="stylesheet" href="../dist/main.css">
 </head>
 <body>
+<div id="main">
 
+</div>
 </body>
 </html>
